# passwordManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  accounts.init  passwordManager  plan.txt  run_tests.sh
include/: Accounts.h  Manager.h  MasterKeyManager.h  encryption.h  structures.h
src/: Accounts.cpp  Accounts.h  Encryption.cpp  Manager.cpp  Manager.h  main.cpp
src/encryption/: Encryption.cpp
src/tools/: Accounts.cpp  Manager.cpp  MasterKeyManager.cpp
src/utils/: Utils.cpp
